--- a/src/_data/faq.yaml
+++ b/src/_data/faq.yaml
@@ -1,17 +1,23 @@
 section_title: FAQ
-section_title_symbol: 🝆
+section_title_symbol: 🝰
 title_symbol_color: "gold"
 
-section_description: Find the answers to your most pressing questions about our transformative breathwork and sound healing practices. Explore how our services can align with your journey to inner peace and self-discovery.
+section_description: Find the answers to your most pressing questions about our vegan culinary courses, whole food education, and utensil maintenance workshops. Discover how our services can enhance your cooking journey and support a plant-based lifestyle focused on quality and taste.
 section_description_symbol: 🝮
 description_symbol_color: "gold"
 
 faq_list:
-  - question: What can I expect during a typical breathwork or sound healing session?
-    answer: During a session, you’ll be guided through breathing techniques or immersed in soothing sound vibrations, depending on the focus of the session. Breathwork may involve rhythmic, connected breathing to release tension and access deeper states of consciousness. Sound healing sessions use instruments like gongs, bowls, and chimes to promote relaxation, reduce stress, and restore balance. Each session is designed to help you feel more grounded, centered, and aligned.
-  - question: Are your services suitable for beginners, or do I need prior experience?
-    answer: Our services are open to everyone, regardless of experience level. Whether you’re completely new or have practiced for years, we tailor the sessions to meet you where you are. Beginners will receive clear guidance and support, while experienced participants can deepen their existing practices.
-  - question: How do I prepare for an online session compared to an in-person session?
-    answer: For online sessions, ensure you have a quiet, comfortable space where you can relax undisturbed. You may want to have a yoga mat, blanket, or cushion nearby. Using headphones is recommended for sound healing to fully immerse yourself in the experience. For in-person sessions, dress comfortably and bring any personal items that help you feel at ease, like a water bottle or eye mask.
-  - question: What are the potential benefits of incorporating breathwork and sound healing into my routine?
-    answer: Regular breathwork and sound healing can reduce stress, improve mental clarity, enhance emotional resilience, and promote deeper relaxation. These practices help release energetic blockages, boost creativity, and foster spiritual growth. Incorporating them into your routine supports a balanced mind, body, and spirit.
+  - question: What types of food preparation courses do you offer?
+    answer: We offer a range of food preparation courses, from beginner to advanced levels, focusing on vegan cuisine. Our courses cover everything from basic knife skills to advanced batch cooking and meal planning.
+  - question: Are your classes available online, or do I need to attend in person?
+    answer: We offer both in-person and online classes. You can choose the format that best suits your needs. Our online classes are interactive and designed to provide the same hands-on experience as our in-person sessions.
+  - question: What is included in the Whole Food Education workshops?
+    answer: Our Whole Food Education workshops cover a variety of topics, including nutrient-dense meal planning, seasonal eating, fermentation techniques, and the benefits of whole, plant-based foods.
+  - question: How do I sign up for a workshop or course?
+    answer: You can sign up for any of our workshops or courses through our website. Simply select the course you’re interested in, choose your preferred date, and complete the registration process online.
+  - question: What can I expect from the Utensil Maintenance Workshops?
+    answer: Our Utensil Maintenance Workshops teach you how to properly care for and maintain your kitchen tools, including knife sharpening, eco-friendly utensil care, and cookware maintenance. These skills help you keep your tools in top shape, ensuring a better cooking experience.
+  - question: Are your services suitable for beginners?
+    answer: Absolutely! We welcome individuals of all skill levels. Our courses and workshops are designed to be accessible, whether you’re new to vegan cooking or looking to refine your existing skills.
+  - question: Do you provide all the ingredients and tools needed for the workshops?
+    answer: For our in-person classes, all necessary ingredients and tools are provided. For online classes, we will send you a list of recommended ingredients and tools to have on hand, along with options for sourcing them.
