--- a/src/_data/image_slider.yaml
+++ b/src/_data/image_slider.yaml
@@ -9,5 +9,5 @@ images:
     description: A man deep in resolve during a session.
 
 symbol_start: 🜳
-text_content: Discover the healing power of the breath, find [%br%] solace from stress and anxiety while nurturing [%br%] self-awareness, love, and compassion, all [%br%] within the sanctuary of your home
+text_content: Discover the art of whole food cooking [%br%] enhance your culinary skills while nourishing [%br%] your body and soul, all from the comfort [%br%] of your own kitchen.
 symbol_end: 🝞
