--- a/src/_data/services_section.yaml
+++ b/src/_data/services_section.yaml
@@ -1,26 +1,16 @@
 services:
-  - title: Alchemical Breathwork
-    description:
-      Embark on a transformative journey with conscious connected breath,
-      guided by Jade, to release tension and achieve deep relaxation, inner
-      healing, and renewed clarity.
+  - title: Food Preparation Courses
+    description: Master clean cooking with our hands-on courses. Learn essential techniques, from knife skills to batch cooking, and elevate your kitchen confidence with plant-based recipes.
     symbol: 🝲
-    image: /static/img/service-breathwork.jpg
-    image_description: A man lying down, focused on his breathing
-  - title: Sacred Sound Healing
-    description:
-      Embark on a transformative journey with alchemical sound healing,
-      guided by Jade Lyons, where deep relaxation, stress relief, and spiritual
-      connection are achieved through a masterful blend of gongs, healing
-      instruments, and ambient sounds.
+    image: /static/img/service-1.png
+    image_description: Presenting food on a dish and bowl
+  - title: Whole Food Education
+    description: Dive into the world of whole foods. Explore nutrient-dense meal planning, seasonal eating, and fermentation to enhance your vegan diet with flavor and nutrition.
     symbol: 🜻
-    image: /static/img/service-sound-healing.jpg
-    image_description: Jade tapping a gong with a mallet
-  - title: Heart Opening Cacao Ceremony
-    description:
-      Experience Yuki’s captivating cacao ceremony, a fusion of Mayan and
-      Japanese traditions, guiding you on a transformative journey of
-      self-discovery, inner harmony, and profound connection.
+    image: /static/img/service-2.png
+    image_description: Bowls of different fresh produce
+  - title: Utensil Maintenance Workshops
+    description: Keep your kitchen tools in top shape. Learn the art of knife sharpening, eco-friendly utensil care, and proper cookware maintenance to support your vegan culinary journey.
     symbol: 🝚
-    image: /static/img/service-cacao-ceremony.jpg
-    image_description: Common tools for cacao ceremonies
+    image: /static/img/service-3.png
+    image_description: A knife and other kitchen tools
