--- a/src/_data/text_block_1.yaml
+++ b/src/_data/text_block_1.yaml
@@ -1,3 +1,3 @@
 symbol_start: 🜲
-text_content: Experience transformative breathwork, [%br%] sound healing sessions, meditations [%br%] and sacred cacao ceremonies [%br%] in-person and online
+text_content: Experience hands-on food preparation [%br%] courses, whole food education, and [%br%] utensil maintenance workshops [%br%] in-person and online
 symbol_end: 🜒
