--- a/src/_data/text_block_2.yaml
+++ b/src/_data/text_block_2.yaml
@@ -1,3 +1,3 @@
 symbol_start: 🝱
-text_content: Get ticktes to upcoming events and learn [%br%] more about the transformative power of [%br%] breathwork, sound healing, cacao [%br%] ceremonies and meditation
+text_content: Get ticktes to upcoming workshops and learn [%br%] more about the art of food preparation, [%br%] whole food nutrition, and the care of [%br%] your kitchen.
 symbol_end: 🜣
