--- a/src/_data/image_slider.yaml
+++ b/src/_data/image_slider.yaml
@@ -1,12 +1,12 @@
 images:
   - src: /static/img/slider-image-1.png
-    description: A sound healing session. A large group joined together.
+    description: A man handling a steaming pot.
   - src: /static/img/slider-image-2.png
-    description: A woman during a sound healing session.
+    description: The Ryan brothers preping their kitchen.
   - src: /static/img/slider-image-3.png
-    description: A group during a session.
+    description: Garnishing snap peas with premium sea salt.
   - src: /static/img/slider-image-4.png
-    description: A man deep in resolve during a session.
+    description: A delicious bowl of fresh vegetables.
 
 symbol_start: 🜳
 text_content: Discover the art of whole food cooking [%br%] enhance your culinary skills while nourishing [%br%] your body and soul, all from the comfort [%br%] of your own kitchen.
