--- a/src/_data/text_block_1.yaml
+++ b/src/_data/text_block_1.yaml
@@ -1,3 +1,3 @@
 symbol_start: 🜲
-text_content: Experience hands-on food preparation [%br%] courses, whole food education, and [%br%] utensil maintenance workshops [%br%] in-person and online
+text_content: Experience hands-on food preparation [%br.md-screen-and-up%] courses, whole food education, and [%br.md-screen-and-up%] utensil maintenance workshops [%br.md-screen-and-up%] in-person and online
 symbol_end: 🜒
