--- a/src/_data/text_block_2.yaml
+++ b/src/_data/text_block_2.yaml
@@ -1,3 +1,3 @@
 symbol_start: 🝱
-text_content: Get ticktes to upcoming workshops and learn [%br%] more about the art of food preparation, [%br%] whole food nutrition, and the care of [%br%] your kitchen.
+text_content: Get ticktes to upcoming workshops and learn [%br.md-screen-and-up%] more about the art of food preparation, [%br.md-screen-and-up%] whole food nutrition, and the care of [%br.md-screen-and-up%] your kitchen.
 symbol_end: 🜣
