--- a/src/_data/header.yaml
+++ b/src/_data/header.yaml
@@ -1,3 +1,3 @@
 banner_toggle: true
-banner_message: Don't miss our limited offer! 20% off all bundles! Offer ends 11/01/2024
+banner_message: Template set via header.js
 banner_spacer_symbol: 🜹
