--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -13,29 +13,6 @@ logo_url: https://flavorsofalchemy.netlify.app/static/img/admin-logo.svg # On ad
 local_backend: true
 # publish_mode: editorial_workflow
 collections:
-  # - name: "blog"
-  #   label: "Blog"
-  #   folder: "src/posts"
-  #   preview_path: "posts/blog/{{filename}}/"
-  #   create: true
-  #   editor:
-  #     preview: false
-  #   fields:
-  #     - { label: "Title", name: "title", widget: "string" }
-  #     - { label: "Description", name: "description", widget: "string" }
-  #     - { label: "Author", name: "author", widget: "string" }
-  #     - { label: "Publish Date", name: "date", widget: "datetime" }
-  #     - { label: "Body", name: "body", widget: "markdown" }
-  #     - widget: select
-  #       label: "tags"
-  #       name: "tags"
-  #       multiple: true
-  #       create: true
-  #       options: ["Tags", "created", "from", "config.yml"]
-  #     - label: "Cover Image" # Only seems to work with .md collections
-  #       name: "image"
-  #       widget: "image"
-  #       required: false
   - name: "home_page"
     label: "Page - Home"
     description: >
@@ -48,7 +25,7 @@ collections:
         file: "src/_data/header.yaml"
         preview_path: "#"
         editor:
-          preview: true
+          preview: false
         fields:
           - name: "banner_toggle"
             label: "Banner Toggle"
@@ -65,11 +42,12 @@ collections:
         file: "src/_data/hero.yaml"
         preview_path: "#hero"
         editor:
-          preview: true
+          preview: false
         fields:
           # - name: "section_title"
           #   label: "Section Title"
           #   widget: "string"
+          #   required: true
           - name: "hero_lists"
             label: "Services Lists"
             label_singular: "List"
@@ -91,6 +69,7 @@ collections:
                   multiple: false,
                   options: ["gold", "pink"],
                   default: ["gold"],
+                  required: false,
                 }
               - name: "hero_list_items"
                 label: "List items"
@@ -102,6 +81,8 @@ collections:
         label: "Partial - Text Block 1"
         file: "src/_data/text_block_1.yaml"
         preview_path: "#text-block-1"
+        editor:
+          preview: false
         fields:
           - {
               name: "symbol_start",
@@ -115,7 +96,7 @@ collections:
               label: "Text content",
               widget: "text",
               required: true,
-              hint: "Optional. Use the token [%br%] to start a new line.",
+              hint: "Use tokens for greater customization over text. Visit https://axyscreative.com/tokens to learn more.",
             }
           - {
               name: "symbol_end",
@@ -129,8 +110,28 @@ collections:
         file: "src/_data/services_section.yaml"
         preview_path: "#services"
         editor:
-          preview: true
+          preview: false
         fields:
+          - name: "section_title"
+            label: "Section Title"
+            widget: "string"
+            required: true
+          - {
+              name: "title_symbol",
+              label: "Section Title Symbol",
+              widget: "string",
+              required: false,
+              hint: "Optional alchemy symbol at the end of the title. https://glyphy.io/cool-symbols/alchemy",
+            }
+          - {
+              name: "title_symbol_color",
+              label: "Section Title Symbol Color",
+              widget: "select",
+              multiple: false,
+              options: ["gold", "pink"],
+              default: ["gold"],
+              required: false,
+            }
           - name: "services"
             label: "Services"
             label_singular: "Service"
@@ -149,6 +150,15 @@ collections:
                   widget: "string",
                   required: false,
                   hint: "Optional alchemy symbol at the end of the title. https://glyphy.io/cool-symbols/alchemy",
+                }
+              - {
+                  name: "symbol_color",
+                  label: "Symbol Color",
+                  widget: "select",
+                  multiple: false,
+                  options: ["gold", "pink"],
+                  default: ["gold"],
+                  required: false,
                 }
               - {
                   name: "description",
@@ -206,7 +216,7 @@ collections:
               label: "Text content",
               widget: "text",
               required: true,
-              hint: "Optional. Use the token [%br%] to start a new line.",
+              hint: "Use tokens for greater customization over text. Visit https://axyscreative.com/tokens to learn more.",
             }
           - {
               name: "symbol_end",
@@ -220,11 +230,28 @@ collections:
         file: "src/_data/bundles.yaml"
         preview_path: "#bundles"
         editor:
-          preview: true
+          preview: false
         fields:
           - name: "section_title"
             label: "Section Title"
             widget: "string"
+            required: true
+          - {
+              name: "title_symbol",
+              label: "Section Title Symbol",
+              widget: "string",
+              required: false,
+              hint: "Optional alchemy symbol at the end of the title. https://glyphy.io/cool-symbols/alchemy",
+            }
+          - {
+              name: "title_symbol_color",
+              label: "Section Title Symbol Color",
+              widget: "select",
+              multiple: false,
+              options: ["gold", "pink"],
+              default: ["gold"],
+              required: false,
+            }
           - name: "price_cards"
             label: "Price Cards"
             label_singular: "Card"
@@ -289,11 +316,28 @@ collections:
         file: "src/_data/about.yaml"
         preview_path: "#about"
         editor:
-          preview: true
+          preview: false
         fields:
           - name: "section_title"
             label: "Section Title"
             widget: "string"
+            required: true
+          - {
+              name: "title_symbol",
+              label: "Section Title Symbol",
+              widget: "string",
+              required: false,
+              hint: "Optional alchemy symbol at the end of the title. https://glyphy.io/cool-symbols/alchemy",
+            }
+          - {
+              name: "title_symbol_color",
+              label: "Section Title Symbol Color",
+              widget: "select",
+              multiple: false,
+              options: ["gold", "pink"],
+              default: ["gold"],
+              required: false,
+            }
           - name: "team_members"
             label: "Team Members"
             label_singular: "Team Member"
@@ -354,6 +398,7 @@ collections:
                   multiple: false,
                   options: ["gold", "pink"],
                   default: ["gold"],
+                  required: false,
                 }
       - name: "text_block_2"
         label: "Partial - Text Block 2"
@@ -372,7 +417,7 @@ collections:
               label: "Text content",
               widget: "text",
               required: true,
-              hint: "Optional. Use the token [%br%] to start a new line.",
+              hint: "Use tokens for greater customization over text. Visit https://axyscreative.com/tokens to learn more.",
             }
           - {
               name: "symbol_end",
@@ -386,12 +431,17 @@ collections:
         file: "src/_data/faq.yaml"
         preview_path: "#faq"
         editor:
-          preview: true
+          preview: false
         fields:
+          - name: "show_section"
+            label: "Show Section"
+            widget: "boolean"
+            default: true
           - name: "section_title"
             label: "Section Title"
             widget: "string"
-          - name: "section_title_symbol"
+            required: true
+          - name: "title_symbol"
             label: "Section Title Symbol"
             widget: "string"
             required: false
@@ -416,8 +466,8 @@ collections:
             required: false
             options: ["gold", "pink"]
             default: ["gold"]
-          - name: "faq_list"
-            label: "FAQ List"
+          - name: "faq_items"
+            label: "FAQ Items"
             label_singular: "FAQ item"
             widget: "list"
             collapsed: false
@@ -434,3 +484,7 @@ collections:
                   widget: "text",
                   required: true,
                 }
+          - name: "faq_behavior_single"
+            label: "FAQ Behavior (Single)"
+            widget: "boolean"
+            hint: "This option allows only one FAQ item to be opened at a time."
