--- a/src/_data/social_media.yaml
+++ b/src/_data/social_media.yaml
@@ -1,7 +1,7 @@
 links:
   - title: Instagram
-    url: https://www.instagram.com/sacredbreathalchemy?igshid=MzMyNGUyNmU2YQ%3D%3D&utm_source=qr
+    url: https://www.instagram.com/axyscreative/
     src: ../static/img/icon-instagram.svg
   - title: Facebook
-    url: https://facebook.com
+    url: https://www.instagram.com/axyscreative/
     src: /static/img/icon-facebook.svg
