--- a/src/_data/bundles.yaml
+++ b/src/_data/bundles.yaml
@@ -1,6 +1,6 @@
 section_title: Join Us
 title_symbol: 🜊
-title_symbol_color: "gold"
+title_symbol_color: "color-primary"
 
 price_cards:
   - title: Basic Cooking Essentials
