swapped 'vegan' for 'plant-based'

--- a/src/_data/about.yaml
+++ b/src/_data/about.yaml
@@ -22,7 +22,7 @@ team_members:
         icon: /static/img/icon-instagram-block.svg
 
 paragraph_details:
-  - description: With a shared passion for vegan cuisine and a commitment to quality and taste, the Ryan brothers created a business that not only nourishes the body but also celebrates the art of plant-based cooking.
+  - description: With a shared passion for plant-based cuisine and a commitment to quality and taste, the Ryan brothers created a business that not only nourishes the body but also celebrates the art of plant-based cooking.
     symbol: 🝮
     color: "color-primary"
   - description: Jake, a seasoned chef with deep roots in European cuisine, brings his flair for bold flavors and innovative food preparation techniques.
