--- a/src/_data/faq.yaml
+++ b/src/_data/faq.yaml
@@ -4,13 +4,13 @@ section_title: FAQ
 title_symbol: 🝌
 title_symbol_color: "color-primary"
 
-section_description: Find the answers to your most pressing questions about our vegan culinary courses, whole food education, and utensil maintenance workshops. Discover how our services can enhance your cooking journey and support a plant-based lifestyle focused on quality and taste.
+section_description: Find the answers to your most pressing questions about our plant-based culinary courses, whole food education, and utensil maintenance workshops. Discover how our services can enhance your cooking journey and support a plant-based lifestyle focused on quality and taste.
 section_description_symbol: 🝮
 description_symbol_color: "color-primary"
 
 faq_items:
   - question: What types of food preparation courses do you offer?
-    answer: We offer a range of food preparation courses, from beginner to advanced levels, focusing on vegan cuisine. Our courses cover everything from basic knife skills to advanced batch cooking and meal planning.
+    answer: We offer a range of food preparation courses, from beginner to advanced levels, focusing on plant-based cuisine. Our courses cover everything from basic knife skills to advanced batch cooking and meal planning.
   - question: Are your classes available online, or do I need to attend in person?
     answer: We offer both in-person and online classes. You can choose the format that best suits your needs. Our online classes are interactive and designed to provide the same hands-on experience as our in-person sessions.
   - question: What is included in the Whole Food Education workshops?
@@ -20,7 +20,7 @@ faq_items:
   - question: What can I expect from the Utensil Maintenance Workshops?
     answer: Our Utensil Maintenance Workshops teach you how to properly care for and maintain your kitchen tools, including knife sharpening, eco-friendly utensil care, and cookware maintenance. These skills help you keep your tools in top shape, ensuring a better cooking experience.
   - question: Are your services suitable for beginners?
-    answer: Absolutely! We welcome individuals of all skill levels. Our courses and workshops are designed to be accessible, whether you’re new to vegan cooking or looking to refine your existing skills.
+    answer: Absolutely! We welcome individuals of all skill levels. Our courses and workshops are designed to be accessible, whether you’re new to plant-based cooking or looking to refine your existing skills.
   - question: Do you provide all the ingredients and tools needed for the workshops?
     answer: For our in-person classes, all necessary ingredients and tools are provided. For online classes, we will send you a list of recommended ingredients and tools to have on hand, along with options for sourcing them.
 
