--- a/src/_data/site_branding.yaml
+++ b/src/_data/site_branding.yaml
@@ -1,2 +1,2 @@
-color_primary: "#ebc554"
-color_secondary: "#ff859d"
+color_primary: "#ebc554" #currently only used in hero
+color_secondary: "#ff859d" #currently only used in hero
